增加了一个可以在文件末尾写入的功能
本来我是不想加这个的，因为我觉得这个功能完全可以通过先读取整个内容，然后把要加的内容放在后面，然后再写入但是这样太复杂了，可能根本没人想这么用，所以呢，我还是把这玩意加上了