@@ -10,6 +10,8 @@ import com.follarce.plugin.FunctionProvider;
 import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 /**
@@ -99,7 +101,7 @@ public class NetworkFunctionProvider implements FunctionProvider {
      */
     private String extractFilenameFromUrl(String urlString) {
         try {
-            URL url = new URL(urlString);
+            URL url = new URI(urlString).toURL();
             String path = url.getPath();
 
             if (path == null || path.isEmpty() || path.equals("/")) {
@@ -143,7 +145,7 @@ public class NetworkFunctionProvider implements FunctionProvider {
             }
 
             return filename;
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             return null;
         }
     }
@@ -204,8 +206,8 @@ public class NetworkFunctionProvider implements FunctionProvider {
             // Validate and create URL
             URL url;
             try {
-                url = new URL(urlString);
-            } catch (MalformedURLException e) {
+                url = new URI(urlString).toURL();
+            } catch (MalformedURLException | URISyntaxException e) {
                 return new String[]{"ERROR", "INVALID_URL"};
             }
 
@@ -227,8 +229,13 @@ public class NetworkFunctionProvider implements FunctionProvider {
                 if (location != null && !location.isEmpty()) {
                     // Resolve relative URLs
                     if (!location.startsWith("http://") && !location.startsWith("https://")) {
-                        URL baseUrl = connection.getURL();
-                        location = new URL(baseUrl, location).toString();
+                        try {
+                            URL baseUrl = connection.getURL();
+                            location = baseUrl.toURI().resolve(location).toString();
+                        } catch (URISyntaxException e) {
+                            Logger.error("Invalid redirect URL: " + e.getMessage());
+                            return new String[]{"ERROR", "INVALID_REDIRECT"};
+                        }
                     }
                     Logger.info("Following redirect to: " + location);
                     return downloadToFile(location, saveDir, timeout, redirectCount + 1);
